<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="ratingViewModel"
            type="mobg5.g55047.projet.screens.rating.RatingViewModel" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:minWidth="300dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/add_review_text"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/place_rating_review"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:maxHeight="24dp"
        android:minHeight="24dp" />

    <EditText
        android:id="@+id/place_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/comment"
        android:text="@={ratingViewModel.description}"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_review_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close"
            android:textColor="@color/green"
            android:layout_width="0dp"/>

        <Button
            android:id="@+id/submit_review_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit_btn" />

    </LinearLayout>

</LinearLayout>

</layout>
