<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/place_icon"
            android:layout_width="339dp"
            android:layout_height="431dp"
            android:contentDescription="@string/earth_image"
            app:layout_constraintBottom_toTopOf="@+id/welcome_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/earth_background" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:padding="@dimen/text_padding"
            android:text="@string/timeToExplore"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/auth_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/auth_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_green"
            android:padding="@dimen/text_padding"
            android:text="@string/login_button_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/explore_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/explore_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_corner_grey"
            android:padding="@dimen/text_padding"
            android:text="@string/explore"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
