<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="connectionViewModel"
            type="mobg5.g55047.projet.screens.connection.ConnectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.connection.ConnectionFragment">

        <AutoCompleteTextView
            android:id="@+id/enter_email"
            android:layout_width="@dimen/width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_wide"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text="@={connectionViewModel.mail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/email"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:fontFamily="@font/roboto"
            android:text="@string/enter_email"
            app:layout_constraintBottom_toBottomOf="@+id/enter_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/enter_email" />

        <Button
            android:id="@+id/connexion_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:drawableEnd="@android:drawable/ic_menu_send"
            android:onClick="@{()->connectionViewModel.onConnect()}"
            android:text="@string/connexion"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_email"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/timeToExplore"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/roboto"
            android:text="@string/timeToExplore"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="105dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toTopOf="@+id/timeToExplore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/earth" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
